--- a/yaid-ts/tsconfig.json
+++ b/yaid-ts/tsconfig.json
@@ -1,26 +1,23 @@
 {
-	"compilerOptions": {
-		"lib": ["ESNext"],
-		"module": "esnext",
-		"target": "esnext",
-		"moduleResolution": "bundler",
-		"moduleDetection": "force",
-		"allowImportingTsExtensions": true,
-		"strict": true,
-		"downlevelIteration": true,
-		"skipLibCheck": true,
-		"jsx": "preserve",
-		"allowSyntheticDefaultImports": true,
-		"forceConsistentCasingInFileNames": true,
-		"allowJs": true,
-		"noEmit": true,
-		/*
+  "compilerOptions": {
+    "lib": ["ESNext"],
+    "module": "esnext",
+    "target": "esnext",
+    "moduleResolution": "bundler",
+    "moduleDetection": "force",
+    "allowImportingTsExtensions": true,
+    "strict": true,
+    "downlevelIteration": true,
+    "skipLibCheck": true,
+    "jsx": "preserve",
+    "allowSyntheticDefaultImports": true,
+    "forceConsistentCasingInFileNames": true,
+    "allowJs": true,
+    "noEmit": true,
     "types": [
-      "bun-types" // add Bun global
-    ]
-    */
-
-		"outDir": "dist"
-	},
-	"include": ["yaid.ts", "cmd.ts"]
+      "bun-types"
+    ],
+    "outDir": "./dist"
+  },
+  "include": ["yaid.ts", "cmd.ts"]
 }
