--- a/yaid-ts/package.json
+++ b/yaid-ts/package.json
@@ -18,8 +18,9 @@
 		"crockford-base32": "^1.1.0"
 	},
 	"devDependencies": {
+		"@typescript-eslint/eslint-plugin": "^5.60.0",
+		"@typescript-eslint/parser": "^5.60.0",
 		"bun-types": "^0.6.9",
-		"ts-jest": "^29.1.0",
-		"typescript": "5"
+		"eslint": "^8.43.0"
 	}
 }
