--- a/yaid-ts/tsconfig.json
+++ b/yaid-ts/tsconfig.json
@@ -3,20 +3,10 @@
     "lib": ["ESNext"],
     "module": "esnext",
     "target": "esnext",
-    "moduleResolution": "bundler",
-    "moduleDetection": "force",
-    "allowImportingTsExtensions": true,
+    "moduleResolution": "node16",
     "strict": true,
-    "downlevelIteration": true,
-    "skipLibCheck": true,
-    "jsx": "preserve",
-    "allowSyntheticDefaultImports": true,
-    "forceConsistentCasingInFileNames": true,
-    "allowJs": true,
-    "noEmit": true,
-    "types": [
-      "bun-types"
-    ],
+    "sourceMap": true,
+    "declaration": true,
     "outDir": "./dist"
   },
   "include": ["yaid.ts", "cmd.ts"]
