--- a/yaid-ts/tsconfig.json
+++ b/yaid-ts/tsconfig.json
@@ -1,10 +1,10 @@
 {
   "compilerOptions": {
-    "lib": ["ESNext"],
+    "lib": ["es6", "dom"],
     "module": "esnext",
     "target": "esnext",
     "moduleResolution": "node16",
-    "strict": true,
+    //"strict": true,
     "sourceMap": true,
     "declaration": true,
     "outDir": "./dist"
