--- a/yaid-ts/tsconfig.json
+++ b/yaid-ts/tsconfig.json
@@ -1,13 +1,18 @@
 {
-  "compilerOptions": {
-    "lib": ["es6", "dom"],
-    "module": "esnext",
-    "target": "esnext",
-    "moduleResolution": "node16",
-    //"strict": true,
-    "sourceMap": true,
-    "declaration": true,
-    "outDir": "./dist"
-  },
-  "include": ["yaid.ts", "cmd.ts"]
+    "compilerOptions": {
+        "lib": ["es2021", "dom"],
+        "module": "commonjs",
+        "target": "es2021",
+
+        "strict": true,
+        "esModuleInterop": true,
+        "skipLibCheck": true,
+        "forceConsistentCasingInFileNames": true,
+        "moduleResolution": "node",
+
+        "sourceMap": true,
+        "declaration": true,
+        "outDir": "./dist"
+    },
+    "include": ["yaid.ts", "cmd.ts"]
 }
