--- a/yaid-ts/tsconfig.json
+++ b/yaid-ts/tsconfig.json
@@ -1,7 +1,7 @@
 {
     "compilerOptions": {
         "lib": ["es2021", "dom"],
-        "module": "commonjs",
+        "module": "umd",
         "target": "es2021",
 
         "strict": true,
