--- a/yaid-ts/package.json
+++ b/yaid-ts/package.json
@@ -18,10 +18,8 @@
     "devDependencies": {
         "@typescript-eslint/eslint-plugin": "^5.60.0",
         "@typescript-eslint/parser": "^5.60.0",
-        "bun-types": "^0.6.9",
-        "eslint": "^8.43.0"
-    },
-    "engines": {
-        "node": ">=20.0.0"
+        "eslint": "^8.43.0",
+        "jest": "^29.5.0",
+        "ts-jest": "^29.1.0"
     }
 }
