include crockford base32 implementation

--- a/yaid-ts/tsconfig.json
+++ b/yaid-ts/tsconfig.json
@@ -14,5 +14,5 @@
         "declaration": true,
         "outDir": "./dist"
     },
-    "include": ["yaid.ts", "cmd.ts"]
+    "include": ["yaid.ts", "crockford.ts", "cmd.ts"]
 }
