--- a/yaid-ts/package.json
+++ b/yaid-ts/package.json
@@ -18,5 +18,8 @@
         "eslint": "^8.43.0",
         "jest": "^29.5.0",
         "ts-jest": "^29.1.0"
+    },
+    "dependencies": {
+        "esbuild": "^0.18.10"
     }
 }
