--- a/yaid-ts/tsconfig.json
+++ b/yaid-ts/tsconfig.json
@@ -1,16 +1,7 @@
 {
+    "extends": "@tsconfig/node20",
     "compilerOptions": {
-        "lib": ["es2021", "dom"],
-        "module": "commonjs",
-        "target": "es2021",
-
-        "strict": true,
-        "esModuleInterop": true,
-        "skipLibCheck": true,
-        "forceConsistentCasingInFileNames": true,
-        "moduleResolution": "node",
-
-        "sourceMap": true,
+        "lib": ["DOM"],
         "declaration": true,
         "outDir": "./dist"
     },
