--- a/yaid-ts/package.json
+++ b/yaid-ts/package.json
@@ -7,19 +7,21 @@
     "author": "Hans van Leeuwen",
     "bin": "dist/cmd.js",
     "files": "dist",
+    "type": "module",
     "scripts": {
         "build": "tsc",
         "lint": "eslint *.ts",
         "test": "jest"
     },
     "devDependencies": {
+        "@tsconfig/node20": "^1.0.2",
         "@typescript-eslint/eslint-plugin": "^5.60.0",
         "@typescript-eslint/parser": "^5.60.0",
         "eslint": "^8.43.0",
         "jest": "^29.5.0",
         "ts-jest": "^29.1.0"
     },
-    "dependencies": {
-        "esbuild": "^0.18.10"
+    "engines": {
+        "node": ">=20.0.0"
     }
 }
