--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,27 +1,27 @@
 // For format details, see https://aka.ms/devcontainer.json. For config options, see the
 // README at: https://github.com/devcontainers/templates/tree/main/src/go
 {
-    "name": "YAID devcontainer",
-    // Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
-    "image": "mcr.microsoft.com/devcontainers/javascript-node:20",
+	"name": "YAID devcontainer",
+	// Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
+	"image": "mcr.microsoft.com/devcontainers/javascript-node:20",
 
-    // Features to add to the dev container. More info: https://containers.dev/features.
-    "features": {
-        "ghcr.io/devcontainers/features/go:1": {}
-    },
+	// Features to add to the dev container. More info: https://containers.dev/features.
+	"features": {
+		"ghcr.io/devcontainers/features/go:1": {}
+	}
 
-    // Use 'forwardPorts' to make a list of ports inside the container available locally.
-    //"forwardPorts": [6060],
+	// Use 'forwardPorts' to make a list of ports inside the container available locally.
+	//"forwardPorts": [6060],
 
-    // Use 'postCreateCommand' to run commands after the container is created.
-    "postCreateCommand": "npm i -g bun esbuild && curl -fsSL https://deno.land/x/install/install.sh | sh"
+	// Use 'postCreateCommand' to run commands after the container is created.
+	//"postCreateCommand": "npm i -g bun esbuild && curl -fsSL https://deno.land/x/install/install.sh | sh"
 
-    // Start a godoc server on 6060
-    //"postStartCommand": "go run golang.org/x/tools/cmd/godoc@latest"
+	// Start a godoc server on 6060
+	//"postStartCommand": "go run golang.org/x/tools/cmd/godoc@latest"
 
-    // Configure tool-specific properties.
-    // "customizations": {},
+	// Configure tool-specific properties.
+	// "customizations": {},
 
-    // Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
-    // "remoteUser": "root"
+	// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
+	// "remoteUser": "root"
 }
