--- a/yaid-ts/package.json
+++ b/yaid-ts/package.json
@@ -6,23 +6,26 @@
 	"license": "MIT",
 	"author": "Hans van Leeuwen",
 	"bin": "dist/cmd.js",
-	"files": "dist",
 	"type": "module",
 	"main": "yaid",
 	"scripts": {
-		"build": "tsc && rm dist/cmd.d.ts dist/crockford.d.ts",
+		"build": "bun build yaid.ts --outdir . --sourcemap external",
 		"lint": "eslint *.ts",
-		"test": "jest"
+		"test": "bun test"
 	},
 	"devDependencies": {
 		"@tsconfig/node20": "^1.0.2",
 		"@typescript-eslint/eslint-plugin": "^5.60.0",
 		"@typescript-eslint/parser": "^5.60.0",
-		"eslint": "^8.43.0",
-		"jest": "^29.5.0",
-		"ts-jest": "^29.1.0"
+		"bun": "^0.6.12",
+		"eslint": "^8.43.0"
 	},
 	"engines": {
 		"node": ">=20.0.0"
-	}
+	},
+	"files": [
+		"cmd.js",
+		"yaid.js",
+		"yaid.js.map"
+	]
 }
