Generate markdown api docs

--- a/yaid-ts/tsconfig.json
+++ b/yaid-ts/tsconfig.json
@@ -6,5 +6,5 @@
 		"sourceMap": true,
 		"outDir": "./dist"
 	},
-	"include": ["yaid.ts", "crockford.ts", "cmd.ts"]
+	"include": ["yaid.ts", "crockford.ts"]
 }
