--- a/yaid-ts/package.json
+++ b/yaid-ts/package.json
@@ -10,6 +10,7 @@
 	"main": "yaid",
 	"scripts": {
 		"build": "bun build yaid.ts --outdir . --sourcemap external",
+		"docs": "typedoc --plugin typedoc-plugin-markdown --out docs yaid.ts",
 		"lint": "eslint *.ts",
 		"test": "bun test"
 	},
@@ -18,7 +19,9 @@
 		"@typescript-eslint/eslint-plugin": "^5.60.0",
 		"@typescript-eslint/parser": "^5.60.0",
 		"bun": "^0.6.12",
-		"eslint": "^8.43.0"
+		"eslint": "^8.43.0",
+		"typedoc": "^0.24.8",
+		"typedoc-plugin-markdown": "^3.15.3"
 	},
 	"engines": {
 		"node": ">=20.0.0"
@@ -26,6 +29,7 @@
 	"files": [
 		"cmd.js",
 		"yaid.js",
-		"yaid.js.map"
+		"yaid.js.map",
+		"yaid.ts"
 	]
 }
