--- a/yaid-ts/tsconfig.json
+++ b/yaid-ts/tsconfig.json
@@ -1,10 +1,7 @@
 {
 	"extends": "@tsconfig/node20",
 	"compilerOptions": {
-		"lib": ["DOM", "es2023"],
-		"declaration": true,
-		"sourceMap": true,
-		"outDir": "./dist"
+		"lib": ["DOM", "es2023"]
 	},
 	"include": ["yaid.ts", "crockford.ts"]
 }
