--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,7 @@
-__pycache__/
-yaid.egg-info/
 build/
 dist/
 docs/
 node_modules/
 package-lock.json
-yaid.js
-yaid.js.map
+__pycache__/
+*.egg-info/
