--- a/site/package.json
+++ b/site/package.json
@@ -7,7 +7,7 @@
 	"author": "Hans van Leeuwen",
 	"type": "module",
 	"scripts": {
-		"start": "bun run build.js"
+		"build": "bun run build.js && bun build script.js --outdir dist --sourcemap external --minify"
 	},
 	"dependencies": {
 		"@picocss/pico": "^1.5.10",
