--- a/yaid-ts/tsconfig.json
+++ b/yaid-ts/tsconfig.json
@@ -1,7 +1,25 @@
 {
-	"extends": "@tsconfig/node20",
+	// From https://bun.sh/docs/runtime/typescript#recommended-compileroptions
 	"compilerOptions": {
-		"lib": ["DOM", "es2023"]
-	},
-	"include": ["yaid.ts", "crockford.ts"]
+		// add Bun type definitions
+		"types": ["bun-types"],
+
+		// enable latest features
+		"lib": ["DOM", "es2023"],
+
+		// if TS 5.x+
+		"moduleResolution": "bundler",
+		"noEmit": true,
+		"allowImportingTsExtensions": true,
+		"moduleDetection": "force",
+
+		"jsx": "react-jsx", // support JSX
+		"allowJs": true, // allow importing `.js` from `.ts`
+		"esModuleInterop": true, // allow default imports for CommonJS modules
+
+		// best practices
+		"strict": true,
+		"forceConsistentCasingInFileNames": true,
+		"skipLibCheck": true
+	}
 }
