--- a/yaid-ts/package.json
+++ b/yaid-ts/package.json
@@ -9,7 +9,7 @@
 	"type": "module",
 	"main": "dist/yaid.js",
 	"scripts": {
-		"build": "tsc yaid.ts --declaration --emitDeclarationOnly --outDir dist && bun build yaid.ts --outdir dist --sourcemap external --minify",
+		"build": "tsc yaid.ts --declaration --emitDeclarationOnly --outDir dist && bun build yaid.ts --outdir dist --sourcemap external",
 		"docs": "typedoc --plugin typedoc-plugin-markdown --out docs yaid.ts",
 		"lint": "eslint *.ts cmd.js",
 		"test": "bun test"
