--- a/site/package.json
+++ b/site/package.json
@@ -14,9 +14,8 @@
 		"bun": "^0.6.12",
 		"handlebars": "^4.7.7",
 		"jsdoc-to-markdown": "^8.0.0",
-		"remarkable": "^2.0.1"
-	},
-	"devDependencies": {
-		"typedoc": "^0.24.8"
+		"remarkable": "^2.0.1",
+		"typedoc": "^0.24.8",
+		"typedoc-plugin-markdown": "^3.15.3"
 	}
 }
