--- a/site/package.json
+++ b/site/package.json
@@ -12,6 +12,9 @@
 	"dependencies": {
 		"@picocss/pico": "^1.5.10",
 		"bun": "^0.6.12",
+		"markdown-it": "^13.0.1",
+		"markdown-it-code-copy": "^0.1.1",
+		"markdown-it-copy": "^1.2.0",
 		"markdown-it-highlightjs": "^4.0.1"
 	}
 }
