--- a/site/package.json
+++ b/site/package.json
@@ -7,7 +7,7 @@
 	"author": "Hans van Leeuwen",
 	"type": "module",
 	"scripts": {
-		"build": "bun build --minify --sourcemap=external --outdir=dist script.js && bun run build.js"
+		"build": "bun build --minify --sourcemap=external --outdir=dist script.js && bun run build.js && sass style.scss dist/style.css"
 	},
 	"dependencies": {
 		"@picocss/pico": "^1.5.10",
@@ -15,6 +15,7 @@
 		"markdown-it": "^13.0.1",
 		"markdown-it-code-copy": "^0.1.1",
 		"markdown-it-copy": "^1.2.0",
-		"markdown-it-highlightjs": "^4.0.1"
+		"markdown-it-highlightjs": "^4.0.1",
+		"sass": "^1.64.1"
 	}
 }
