--- a/yaid-ts/package.json
+++ b/yaid-ts/package.json
@@ -22,7 +22,7 @@
 		"eslint": "^8.43.0",
 		"typedoc": "^0.24.8",
 		"typedoc-plugin-markdown": "^3.15.3",
-		"typescript": "5.0"
+		"typescript": "^5.1.6"
 	},
 	"engines": {
 		"bun": ">=0.6.12",
