--- a/site/package.json
+++ b/site/package.json
@@ -11,10 +11,13 @@
 	},
 	"dependencies": {
 		"@picocss/pico": "^1.5.10",
-		"bun": "^0.6.12",
+		"bun": "^0.6.14",
 		"markdown-it": "^13.0.1",
 		"markdown-it-copy": "^1.2.0",
 		"markdown-it-highlightjs": "^4.0.1",
 		"sass": "^1.64.1"
+	},
+	"devDependencies": {
+		"bun-types": "^0.6.14"
 	}
 }
