--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,5 +1,4 @@
-// For format details, see https://aka.ms/devcontainer.json. For config options, see the
-// README at: https://github.com/devcontainers/templates/tree/main/src/go
+// For format details, see https://aka.ms/devcontainer.json.
 {
 	"name": "YAID devcontainer",
 
@@ -15,13 +14,18 @@
 	//"forwardPorts": [6060],
 
 	// Use 'postCreateCommand' to run commands after the container is created.
-	"postCreateCommand": "npm i -g bun && sudo apt update && sudo apt install -y python3-setuptools python3-venv"
+	"postCreateCommand": "npm i -g bun && sudo apt update && sudo apt install -y black python3-pip python3-setuptools python3-venv",
 
 	// Start a godoc server on 6060
 	//"postStartCommand": "go run golang.org/x/tools/cmd/godoc@latest"
 
 	// Configure tool-specific properties.
-	// "customizations": {},
+	"customizations": {
+		"vscode": {
+			// Add the IDs of extensions you want installed when the container is created.
+			"extensions": ["esbenp.prettier-vscode", "ms-python.python"]
+		}
+	}
 
 	// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
 	// "remoteUser": "root"
