--- a/site/package.json
+++ b/site/package.json
@@ -7,7 +7,8 @@
 	"author": "Hans van Leeuwen",
 	"type": "module",
 	"scripts": {
-		"build": "bun build --minify --sourcemap=external --outdir=dist script.js && bun run build.js"
+		"build": "bun build --minify --sourcemap=external --outdir=dist script.js && bun run build.ts",
+		"lint": "eslint *.ts *.js && prettier -c ."
 	},
 	"dependencies": {
 		"@picocss/pico": "^1.5.10",
@@ -18,6 +19,7 @@
 		"sass": "^1.64.1"
 	},
 	"devDependencies": {
-		"bun-types": "^0.6.14"
+		"bun-types": "^0.6.14",
+		"prettier": "^3.0.0"
 	}
 }
