--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -5,11 +5,6 @@ on:
         branches: [master]
     pull_request_target:
         branches: [master]
-        types:
-            - opened
-            - reopened
-            - edited
-            - synchronize
 
 jobs:
     yaid-go:
@@ -19,7 +14,7 @@ jobs:
             - uses: actions/setup-go@v4
               with:
                   go-version-file: "go.mod"
-            - name: Test
+            - name: Test go
               working-directory: yaid-go
               run: go test .
 
@@ -30,7 +25,7 @@ jobs:
             - uses: oven-sh/setup-bun@v1
               with:
                   bun-version: latest
-            - name: Test
+            - name: Test js
               working-directory: yaid-js
               run: bun run test
 
@@ -41,6 +36,6 @@ jobs:
             - uses: actions/setup-python@v4
               with:
                   python-version: "3.9"
-            - name: Test
+            - name: Test python
               working-directory: yaid-py
               run: python yaid_test.py
