--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,14 +1,10 @@
 on:
-    release:
-        types: [created]
+    push:
+        branches: [main]
 
 jobs:
-    releases-go:
+    main:
         runs-on: ubuntu-latest
-        strategy:
-            matrix:
-                goos: [linux, windows, darwin]
-                goarch: [amd64, arm64]
         steps:
             - uses: actions/checkout@v3
 
