--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,8 +8,10 @@ jobs:
         steps:
             - uses: actions/checkout@v3
 
+            - uses: oven-sh/setup-bun@v1
+
             - name: Build website
-              run: npm run build
+              run: bun run build
               working-directory: ./site
 
             - uses: peaceiris/actions-gh-pages@v3
