Install npm packages when building site

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,6 +10,9 @@ jobs:
 
             - uses: oven-sh/setup-bun@v1
 
+            - name: Install dependecies
+              run: bun install
+
             - name: Build website
               run: bun run build
               working-directory: ./site
