--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -11,9 +11,11 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v3
+
             - uses: actions/setup-go@v4
               with:
                   go-version-file: "go.mod"
+
             - name: Test go
               working-directory: yaid-go
               run: go test .
@@ -22,20 +24,32 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v3
+
             - uses: oven-sh/setup-bun@v1
               with:
                   bun-version: latest
+
+            - name: Install dependecies
+              working-directory: ./yaid-js
+              run: bun install
+
             - name: Test js
-              working-directory: yaid-js
+              working-directory: ./yaid-js
               run: bun run test
 
     yaid-py:
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v3
+
             - uses: actions/setup-python@v4
               with:
                   python-version: "3.9"
+
+            - name: Install dependecies
+              working-directory: ./yaid-py
+              run: pip3 install krock32
+
             - name: Test python
               working-directory: yaid-py
               run: python yaid_test.py
