--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,6 +11,7 @@ jobs:
             - uses: oven-sh/setup-bun@v1
 
             - name: Install dependecies
+              working-directory: ./site
               run: bun install
 
             - name: Build website
