Updated github actions

--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -2,9 +2,9 @@ name: Check pull request
 
 on:
     push:
-        branches: [master]
+        branches: [main]
     pull_request_target:
-        branches: [master]
+        branches: [main]
 
 jobs:
     yaid-go:
