--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,9 +4,8 @@
 	"[javascript]": {
 		"editor.defaultFormatter": "esbenp.prettier-vscode"
 	},
-	"python.formatting.provider": "none",
-	"python.testing.pytestEnabled": true,
 	"[python]": {
 		"editor.defaultFormatter": "ms-python.black-formatter"
-	}
+	},
+	"python.testing.pytestEnabled": true
 }
