--- a/.editorconfig
+++ b/.editorconfig
@@ -6,3 +6,7 @@ insert_final_newline = true
 max_line_length = 100
 trim_trailing_whitespace = true
 indent_size = 4
+
+[*.{yaml,yml}]
+indent_size = 2
+indent_style = space
