--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -12,7 +12,7 @@ jobs:
 
       - uses: actions/setup-go@v4
         with:
-          go-version-file: "go.mod"
+          go-version-file: "yaid-go/go.mod"
 
       - uses: Jerome1337/gofmt-action@v1.0.5
         with:
