fix: resolve some linting issues in yaid-go

--- a/.github/workflows/check-go.yml
+++ b/.github/workflows/check-go.yml
@@ -21,6 +21,9 @@ jobs:
           gofmt-path: "./src"
           gofmt-flags: "-l -d"
 
+      - name: Lint go
+        run: revive yaid-go
+
       - name: Test go
         working-directory: yaid-go
         run: go test .
