--- a/.github/workflows/check-go.yml
+++ b/.github/workflows/check-go.yml
@@ -14,7 +14,7 @@ jobs:
 
       - uses: actions/setup-go@v4
         with:
-          go-version-file: "yaid-go/go.mod"
+          go-version-file: yaid-go/go.mod
 
       - name: Check go code format
         run: gofmt -l -d ./yaid-go
