--- a/yaid-js/tsconfig.json
+++ b/yaid-js/tsconfig.json
@@ -5,8 +5,9 @@
 		"types": ["bun-types"],
 
 		// enable latest features
-		"lib": ["DOM", "ES2022"],
-		"module": "ES2022",
+		"lib": ["DOM", "ES2020"],
+		"module": "ES2020",
+		"target": "ES2020",
 
 		// if TS 5.x+
 		"moduleResolution": "bundler",
