--- a/site/package.json
+++ b/site/package.json
@@ -20,6 +20,7 @@
 		"sass": "^1.64.1"
 	},
 	"devDependencies": {
+		"@types/markdown-it": "^13.0.0",
 		"bun-types": "^0.6.14",
 		"eslint": "^8.43.0",
 		"prettier": "^3.0.0",
