--- a/.github/workflows/check-go.yml
+++ b/.github/workflows/check-go.yml
@@ -19,10 +19,13 @@ jobs:
       - name: Check go code format
         run: gofmt -l -d ./yaid-go
 
-      - name: Lint go
-        working-directory: yaid-go
-        run: go run honnef.co/go/tools/cmd/staticcheck
-
       - name: Test go
         working-directory: yaid-go
         run: go test .
+
+      - name: Install staticcheck
+        run: go install honnef.co/go/tools/cmd/staticcheck
+
+      - name: Lint go
+        working-directory: yaid-go
+        run: go run honnef.co/go/tools/cmd/staticcheck
