--- a/.github/workflows/check-go.yml
+++ b/.github/workflows/check-go.yml
@@ -7,7 +7,7 @@ on:
       - yaid-go/**
 
 jobs:
-  yaid-go:
+  check-go:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -24,7 +24,7 @@ jobs:
         run: go test .
 
       - name: Install staticcheck
-        run: go install honnef.co/go/tools/cmd/staticcheck
+        run: go install honnef.co/go/tools/cmd/staticcheck@latest
 
       - name: Lint go
         working-directory: yaid-go
