--- a/.github/workflows/check-go.yml
+++ b/.github/workflows/check-go.yml
@@ -23,9 +23,6 @@ jobs:
         working-directory: yaid-go
         run: go test .
 
-      - name: Install staticcheck
-        run: go install honnef.co/go/tools/cmd/staticcheck@latest
-
-      - name: Lint go
-        working-directory: yaid-go
-        run: go run honnef.co/go/tools/cmd/staticcheck
+      - uses: dominikh/staticcheck-action@v1.3.0
+        with:
+          working-directory: yaid-go
