--- a/site/package.json
+++ b/site/package.json
@@ -7,19 +7,26 @@
 	"author": "Hans van Leeuwen",
 	"type": "module",
 	"scripts": {
-		"build": "bun build --minify --sourcemap=external --outdir=dist script.js && bun run build.ts",
-		"lint": "eslint *.ts *.js && prettier -c ."
+		"build": "bun run build.ts",
+		"lint": "eslint *.js *.ts && prettier -c .",
+		"serve": "serve ./dist"
 	},
 	"dependencies": {
 		"@picocss/pico": "^1.5.10",
-		"bun": "^0.6.14",
+		"bun": "^0.7.3",
 		"markdown-it": "^13.0.1",
 		"markdown-it-copy": "^1.2.0",
 		"markdown-it-highlightjs": "^4.0.1",
 		"sass": "^1.64.1"
 	},
 	"devDependencies": {
-		"bun-types": "^0.6.14",
-		"prettier": "^3.0.0"
+		"@typescript-eslint/eslint-plugin": "^5.60.0",
+		"@typescript-eslint/parser": "^5.60.0",
+		"@types/markdown-it": "^13.0.0",
+		"bun": "^0.7.3",
+		"bun-types": "^0.7.3",
+		"eslint": "^8.43.0",
+		"prettier": "^3.0.0",
+		"serve": "^14.2.0"
 	}
 }
