ci: Use version 0 for release-please

--- a/.github/workflows/release-please-js.yml
+++ b/.github/workflows/release-please-js.yml
@@ -19,3 +19,4 @@ jobs:
           release-type: node
           package-name: yaid-js
           monorepo-tags: true
+          bump-minor-pre-major: true
